opti class slider + infos scene

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
     <title>Hello Webpack</title>
 </head>
 <body>
-    <div id="next-btn">Scène suivante</div>
+    <div id="info">
+        <h2 id="title"></h2>
+        <p id="description"></p>
+        <span id="howto"></span>
+        <div id="next-btn">Scène suivante</div>
+    </div>
 </body>
 </html>
