:sparkles:  Add Homepage

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello Webpack</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed&display=swap" rel="stylesheet">
+    <title>Museum of Time</title>
 </head>
 <body>
+    <div class="home">
+        <div class="title-home">
+            <h1>Museum of time</h1>
+            <div id="start-container">
+                <p id="start">start</p>
+                <div class="line"></div>
+            </div>   
+        </div>
+        <div class="clock">
+            <div class="minutes">
+                <div class="needle"></div>
+            </div>
+            <div class="hours">
+                <div class="needle"></div>
+            </div>
+        </div>
+        <div id="romain-numbers">
+            <img src="../static/images/romain-numbers.png" alt="">
+        </div>
+        <div id="triangle">
+            <img src="../static/images/triangle.png" alt="">
+        </div> 
+    </div>
     <div id="info">
         <h2 id="title"></h2>
         <p id="description"></p>
