--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,10 @@
             </div>
         </div>
         <div id="romain-numbers">
-            <img src="../static/images/romain-numbers.png" alt="">
+            <img src="/images/romain-numbers.png" alt="">
         </div>
         <div id="triangle">
-            <img src="../static/images/triangle.png" alt="">
+            <img src="/images/triangle.png" alt="">
         </div> 
     </div>
     <div id="info">
