:sparkles: timeline added

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,35 @@
             </div>
         </div> 
     </div>
+    <div id="timeline">
+        <div id="line"></div>
+        <div id="dates">
+            <div class="date sundial">
+                <div class="text-description">
+                    <p>sundial</p>
+                    <p>700 bce</p>
+                </div>
+                <div class="circle"></div>
+                <div class="arrow-line"></div>
+            </div>
+            <div class="date candle">
+                <div class="text-description">
+                    <p>candle</p>
+                    <p>800 ce</p>
+                </div>
+                <div class="circle"></div>
+                <div class="arrow-line"></div>
+            </div>
+            <div class="date pendulum">
+                <div class="text-description">
+                    <p>pendulum</p>
+                    <p>1602 ce</p>
+                </div>
+                <div class="circle"></div>
+                <div class="arrow-line"></div>
+            </div>
+        </div>
+    </div>
     <div id="info">
         <h2 id="title"></h2>
         <p id="description"></p>
