--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="home">
         <div id="romain-numbers">
-            <img src="/images/romain-numbers.png" alt="">
+            <img src="/images/romain-numbers.png" class="lazyload parallax">
         </div>
         <div id="triangle">
-            <img src="/images/triangle.png" alt="">
+            <img src="/images/triangle.png" class="lazyload parallax">
         </div>
         <div class="title-home">
             <h1>Museum of time</h1>
