--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,8 @@
     <div id="info">
         <h2 id="title"></h2>
         <p id="description"></p>
-        <span id="howto"></span>
+        <span id="question"></span>
+        <span id="answer"></span>
         <div id="next-btn">Scène suivante</div>
     </div>
 </body>
