css and html info part
html
change div and span
create new div

--- a/src/index.html
+++ b/src/index.html
@@ -62,9 +62,14 @@
     <div id="info">
         <h2 id="title"></h2>
         <p id="description"></p>
-        <span id="question"></span>
-        <span id="answer"></span>
-        <div id="next-btn">Scène suivante</div>
+        <div id=questions>
+            <h2 id="question"></h2>
+            <p id="answer"></p>
+        </div>
+        <div id="next-btn">
+            <p id="next-btn-text">Scène suivante</p>
+            <div id="underLine"></div>
+        </div>
     </div>
 </body>
 </html>
