--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="home">
         <div id="romain-numbers">
-            <img src="images/romain-numbers.png" class="lazyload parallax">
+            <img src="images/romain-numbers.png" class="parallax">
         </div>
         <div id="triangle">
-            <img src="images/triangle.png" class="lazyload parallax">
+            <img src="images/triangle.png" class="parallax">
         </div>
         <div class="title-home">
             <h1>Museum of time</h1>
@@ -43,7 +43,7 @@
             </div>
             <div class="date candle">
                 <div class="text-description">
-                    <p>candle</p>
+                    <p>hourglass</p>
                     <p>800 ce</p>
                 </div>
                 <div class="circle"></div>
