--- a/src/index.html
+++ b/src/index.html
@@ -36,23 +36,23 @@
             <div class="date sundial">
                 <div class="text-description">
                     <p>sundial</p>
-                    <p>700 bce</p>
+                    <p>700bce</p>
                 </div>
                 <div class="circle"></div>
                 <div class="arrow-line"></div>
             </div>
-            <div class="date candle">
+            <div class="date hourglass">
                 <div class="text-description">
                     <p>hourglass</p>
-                    <p>800 ce</p>
+                    <p>800ce</p>
                 </div>
                 <div class="circle"></div>
                 <div class="arrow-line"></div>
             </div>
-            <div class="date pendulum">
+            <div class="date pendulum-clock">
                 <div class="text-description">
-                    <p>pendulum</p>
-                    <p>1602 ce</p>
+                    <p>clock</p>
+                    <p>1656ce</p>
                 </div>
                 <div class="circle"></div>
                 <div class="arrow-line"></div>
