--- a/src/index.html
+++ b/src/index.html
@@ -66,9 +66,15 @@
             <h2 id="question"></h2>
             <p id="answer"></p>
         </div>
-        <div id="next-btn">
-            <p id="next-btn-text">Scène suivante</p>
-            <div id="underLine"></div>
+        <div id="button-next-prev">
+            <div id="prev-btn">
+                <p id="prev-btn-text">prévious</p>
+                <div id="underLine-prev"></div>
+            </div>
+            <div id="next-btn">
+                <p id="next-btn-text">next</p>
+                <div id="underLine-next"></div>
+            </div>
         </div>
     </div>
     <div id="interaction"></div>
