--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Museum of Time</title>
 </head>
 <body>
+    <div class="cursor"></div>
     <div class="home">
         <div id="romain-numbers">
             <img src="images/romain-numbers.png" class="parallax">
