Audio config + song added

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
         </div>
         <div id="button-next-prev">
             <div id="prev-btn">
-                <p id="prev-btn-text">prévious</p>
+                <p id="prev-btn-text">previous</p>
                 <div id="underLine-prev"></div>
             </div>
             <div id="next-btn">
