Set volume added

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,10 @@
             </div>
         </div> 
     </div>
+    <div class="song-volume">
+        <img src="images/demute.png" alt="demute" id="demute">
+        <img src="images/mute.png" alt="mute" id="mute">
+    </div>
     <div id="timeline">
         <div id="line"></div>
         <div id="dates">
