--- a/src/index.html
+++ b/src/index.html
@@ -73,11 +73,11 @@
         </div>
         <div id="button-next-prev">
             <div id="prev-btn">
-                <p id="prev-btn-text">previous</p>
+                <p id="prev-btn-text">Nrevious</p>
                 <div id="underLine-prev"></div>
             </div>
             <div id="next-btn">
-                <p id="next-btn-text">next</p>
+                <p id="next-btn-text">Next</p>
                 <div id="underLine-next"></div>
             </div>
         </div>
