--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='icon' type='image/png' href='src/images/favicon.png' />
+    <meta property="og:image" content="src/images/opengraph.png"/>
+    <meta property="og:description" content="Welcome to our THREE.js school project !"/>
+    <meta property="og:url" content="https://chotardlucien.github.io/Time-Museum/"/>
+    <meta property="og:title" content="Museum of Time, a 3D experience"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed&display=swap" rel="stylesheet">
     <title>Museum of Time</title>
 </head>
