--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
         </div>
         <div id="button-next-prev">
             <div id="prev-btn">
-                <p id="prev-btn-text">Nrevious</p>
+                <p id="prev-btn-text">Previous</p>
                 <div id="underLine-prev"></div>
             </div>
             <div id="next-btn">
