Little message home

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
         </div>
         <div class="title-home">
             <h1>Museum of time</h1>
+            <p id="little-message">A 3D experience to understand some time measurement tools.</p>
             <div id="start-container">
                 <p id="start">start</p>
                 <div class="line"></div>
