--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="title-home">
             <h1>Museum of time</h1>
-            <p id="little-message">A 3D experience to understand some time measurement tools.</p>
+            <p id="little-message">A 3D experience to learn the history of time measurement.<br>School project carried out in 5 days.</p>
             <div id="start-container">
                 <p id="start">start</p>
                 <div class="line"></div>
