--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='icon' type='image/png' href='images/favicon.png' />
+    <link rel='icon' type='image/png' href='favicon.png' />
     <meta property="og:image" content="images/opengraph.png"/>
     <meta property="og:description" content="Welcome to our THREE.js school project !"/>
     <meta property="og:url" content="https://chotardlucien.github.io/Time-Museum/"/>
