--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,13 @@
                 <div class="needle"></div>
             </div>
         </div> 
+        <div class="links">
+            <a href="https://dribbble.com/CatincaG" target="_blank">Catinca GHEORGHIU</a>
+            <a href="https://www.behance.net/julieSALAUN" target="_blank">Julie SALAUN</a>
+            <a href="https://dribbble.com/naamiix" target="_blank">Naomi TALLA</a>
+            <a href="https://www.behance.net/lucienchotard" target="_blank">Lucien CHOTARD</a>   
+            <a href="#">Elouan BEGUE</a>
+        </div>
     </div>
     <div class="song-volume">
         <img src="images/demute.png" alt="demute" id="demute">
