--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <div class="cursor"></div>
+    <div class="cursor-delay"></div>
     <div class="home">
         <div id="romain-numbers">
             <img src="images/romain-numbers.png" class="parallax">
@@ -87,11 +88,9 @@
         <div id="button-next-prev">
             <div id="prev-btn">
                 <p id="prev-btn-text">Previous</p>
-                <div id="underLine-prev"></div>
             </div>
             <div id="next-btn">
                 <p id="next-btn-text">Next</p>
-                <div id="underLine-next"></div>
             </div>
         </div>
     </div>
